--- a/contactus.html
+++ b/contactus.html
@@ -7,137 +7,125 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   </head>
+  <style>
+    body{
+      /* font-family: monospace; */
+      background-color: rgb(244, 220, 227);
+      color: #fff;
+    }
+    .heading{
+      text-align: center;
+      font-size: 45px;
+      border-bottom: 2px dotted #000;
+    }
+    .container{
+      background-color: #696868;
+    }
+    .btn-info{
+      width: 50%;
+      letter-spacing: 2px;
+      background: transparent;
+      transition: all 0.5s ease-in-out;
+    }
+    .btn-info:hover{
+      transform: scale(1.05);
+    }
+    .icn{
+      font-family: monospace;
+      font-size: 17px;
+    }
+    hr{
+      width: 80%;
+    }
+    .media ul li a{
+      color: #fff;
+      float: left;
+      font-family: monospace;
+      font-size: 22px;
+      margin-left: 23px;
+      margin-right: 10px;
+      transition: 0.5s ease-in-out;
+    }
+    .media ul li a:hover{
+      color: #999;
+    } 
+  </style>
+
+
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img src="./assets/logo.jpeg" width="45px"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse ml-auto" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="service.html">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="aboutus.html">About us</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contactus.html">Contact Us <span class="sr-only">(current)</span></a>
-            </li>
-          </ul>
+      <a class="navbar-brand" href="#"><img src="./assets/logo.jpeg" width="45px"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse ml-auto" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="service.html">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="aboutus.html">About us</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="contactus.html">Contact Us <span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <br><br>
+    <div class="container">
+      <h2 class="heading">Contact Us</h2>
+      <h2 style="text-align: center; font-family: monospace; ">We'd love to hear from you</h2>
+      <p style="text-align: center; font-family: monospace; ">We Like to create things with fun, open-minded people. Feel free to say hello!</p>
+    <br>
+      <div class="row">
+
+      <div class="col-md-6">
+      <form>
+      <input type="Text" name="text" required="" placeholder="Your Name" class="form-control">
+      <br>
+      <input type="Email" name="email" required="" placeholder="Your Email" class="form-control">
+      <br>
+      <textarea rows="6" class="form-control" required="" placeholder="Message"></textarea>
+      <br>
+      <center>
+      <button class="btn btn-info">Send</button>
+      </center>
+      <br><br>
+      </form>
+      </div>
+      <div class="col-md-1"></div>
+      <div class="col-md-5">
+        <p class="icn"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;&nbsp; 123 Marina Bay, Miri, Sarawak, Malaysia</p>
+        <p class="icn"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;&nbsp; +6012 345 6789</p>
+        <p class="icn"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp; beautyflowercupcake@gmail.com</p>
+      <hr>
+
+        <div class="media">
+
+        <ul class="list-unstyled">
+          <li><a href="#"><i class="fab fa-facebook"></a></i></li>
+          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+          <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+
+        </ul>
         </div>
-      </nav>
-
-
-
-
-
-      <!--Section: Contact v.2-->
-<section class="mb-4">
-
-    <!--Section heading-->
-    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
-    <!--Section description-->
-    <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
-        a matter of hours to help you.</p>
-
-    <div class="row">
-
-        <!--Grid column-->
-        <div class="col-md-9 mb-md-0 mb-5">
-            <form id="contact-form" name="contact-form" action="mail.php" method="POST">
-
-                <!--Grid row-->
-                <div class="row">
-
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <label for="name" class="">Your name</label>
-                            <input type="text" id="name" name="name" class="form-control">
-                        </div>
-                    </div>
-                    <br>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <label for="email" class="">Your email</label>
-                            <input type="text" id="email" name="email" class="form-control">
-                        </div>
-                    </div>
-                    <br>
-                    <!--Grid column-->
-
-                </div>
-                <!--Grid row-->
-
-                <!--Grid row-->
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="md-form mb-0">
-                            <label for="subject" class="">Subject</label>
-                            <input type="text" id="subject" name="subject" class="form-control">
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <!--Grid row-->
-
-                <!--Grid row-->
-                <div class="row">
-
-                    <!--Grid column-->
-                    <div class="col-md-12">
-
-                        <div class="md-form">
-                            <label for="message">Your message</label>
-                            <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
-                        </div>
-
-                    </div>
-                </div>
-                <br>
-                <!--Grid row-->
-
-            </form>
-
-            <div class="text-center text-md-left">
-                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
-            </div>
-            <div class="status"></div>
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-md-3 text-center">
-            <ul class="list-unstyled mb-0">
-                <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                    <p>Beauty Flower Cupcake</p>
-                </li>
-
-                <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                    <p>+6016 808 3297</p>
-                </li>
-
-                <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                    <p>flowerCake@gmail.com</p>
-                </li>
-            </ul>
-        </div>
-        <!--Grid column-->
-
+        <br>
+        <p style="margin-left: 2px;">Web design by Aty Apriani (Yi Lian)</p>
+      </div>
     </div>
-
-</section>
-<!--Section: Contact v.2-->
+    </div>
+      
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
