upload code and pictures for aboutus page

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>About us</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -32,6 +32,39 @@
           </ul>
         </div>
       </nav>
+
+      <div class="aboutus_wrapper">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <h2 class="head_text">WHO I AM</h2>
+            </div>
+            <div class="col-lg-4">
+              <div class="service_box">
+                <span><img class="img-fluid" src="./assets/us1.jpg"></span>
+                <h2>Self Taught Baker</h2>
+                <p>Beautifully detailed in the style of buttercream for flower cupcake. Enjoy the delicious and gorgeous looks of a cupcake.</p>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="service_box">
+                <span><img class="img-fluid" src="./assets/us2.jpg"></span>
+                <h2>Artist Specializing in Buttercream Flower</h2>
+                <p>Create truly works of art of buttercream flower, beautify and decorate your cupcake.</p>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="service_box">
+                <span><img class="img-fluid" src="./assets/us3.jpg"></span>
+                <h2>Create cupcake banquet with us</h2>
+                <p>create delicious and gorgeous flower for the unforgettable moment with your beloved one.</p>
+              </div>
+            </div>
+          </div>  
+        </div>
+      </div>
+
+
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
