--- a/contactus.html
+++ b/contactus.html
@@ -40,18 +40,6 @@
     hr{
       width: 80%;
     }
-    .media ul li a{
-      color: #fff;
-      float: left;
-      font-family: monospace;
-      font-size: 22px;
-      margin-left: 23px;
-      margin-right: 10px;
-      transition: 0.5s ease-in-out;
-    }
-    .media ul li a:hover{
-      color: #999;
-    } 
   </style>
 
 
@@ -80,7 +68,7 @@
       </div>
     </nav>
 
-    <br><br>
+    <br>
     <div class="container">
       <h2 class="heading">Contact Us</h2>
       <h2 style="text-align: center; font-family: monospace; ">We'd love to hear from you</h2>
@@ -105,22 +93,10 @@
       <div class="col-md-1"></div>
       <div class="col-md-5">
         <p class="icn"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;&nbsp; 123 Marina Bay, Miri, Sarawak, Malaysia</p>
-        <p class="icn"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;&nbsp; +6012 345 6789</p>
+        <p class="icn"><i class="fab fa-whatsapp" aria-hidden="true"></i>&nbsp;&nbsp; +6012 345 6789</p>
         <p class="icn"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp; beautyflowercupcake@gmail.com</p>
       <hr>
-
-        <div class="media">
-
-        <ul class="list-unstyled">
-          <li><a href="#"><i class="fab fa-facebook"></a></i></li>
-          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-          <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-
-        </ul>
-        </div>
-        <br>
+        <br><br><br><br><br><br>
         <p style="margin-left: 2px;">Web design by Aty Apriani (Yi Lian)</p>
       </div>
     </div>
