update css style for aboutus, checkout and main page

--- a/aboutus.html
+++ b/aboutus.html
@@ -8,6 +8,35 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+ <style>
+
+  /*AboutUs*/
+  body{
+      /* font-family: monospace; */
+      background-color: rgb(244, 220, 227);
+      color: #fff;
+    }
+.aboutus_wrapper{
+  padding: 10px 0;
+  color: #ffffff;
+}
+.head_text{
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+.aboutus_box{
+  background:  #696868;
+  padding: 20px 30px;
+  border-radius: 10px;
+}
+
+.aboutus_box h2{
+  font-size: 30px;
+  font-weight: 600;
+  margin-bottom:20px;
+}
+</style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -36,25 +65,25 @@
       <div class="aboutus_wrapper">
         <div class="container">
           <div class="row">
-            <div class="col-12">
-              <h2 class="head_text">WHO I AM</h2>
+            <div class="col-12 text-center">
+              <h2 class="head_text">My Stories</h2>
             </div>
             <div class="col-lg-4">
-              <div class="service_box">
+              <div class="aboutus_box">
                 <span><img class="img-fluid" src="./assets/us1.jpg"></span>
-                <h2>Self Taught Baker</h2>
-                <p>Beautifully detailed in the style of buttercream for flower cupcake. Enjoy the delicious and gorgeous looks of a cupcake.</p>
+                <h2>Self Taught <br>Baker</h2>
+                <p>Beautifully detailed in the style of buttercream. Enjoy the delicious and gorgeous looks of a cupcake.</p>
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="service_box">
+              <div class="aboutus_box">
                 <span><img class="img-fluid" src="./assets/us2.jpg"></span>
                 <h2>Artist Specializing in Buttercream Flower</h2>
                 <p>Create truly works of art of buttercream flower, beautify and decorate your cupcake.</p>
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="service_box">
+              <div class="aboutus_box">
                 <span><img class="img-fluid" src="./assets/us3.jpg"></span>
                 <h2>Create cupcake banquet with us</h2>
                 <p>create delicious and gorgeous flower for the unforgettable moment with your beloved one.</p>
