--- a/checkout.html
+++ b/checkout.html
@@ -8,6 +8,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+      .body{
+        background-color: rgb(244, 220, 227);
+      }      .container{
+        background-color: #696868;
+      }
+    </style>
   </head>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#"><img src="./assets/logo.jpeg" width="45px"></a>
@@ -40,7 +47,6 @@
         <h2>Beauty Flower Cupcake</h2>
         <p class="lead"> The ULTIMATE gift of Yummy gorgeous cupcakes!</p>
       </div>
-
         <div class="col-md-8 order-md-1">
           <h4 class="mb-3">Billing address</h4>
           <form class="needs-validation" novalidate>
@@ -187,6 +193,7 @@
             <hr class="mb-4">
             <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
           </form>
+        </div>
         </div>
       </div>
 
