--- a/checkout.html
+++ b/checkout.html
@@ -43,7 +43,7 @@
   <body class="bg-light">
     <div class="container">
       <div class="py-5 text-center">
-        <img class="d-block mx-auto mb-4" src="./assets/logo.jpeg" alt="" width="200" height="200">
+        <img class="d-block mx-auto mb-4" src="./assets/logo.jpg" alt="" width="200" height="200">
         <h2>Beauty Flower Cupcake</h2>
         <p class="lead"> The ULTIMATE gift of Yummy gorgeous cupcakes!</p>
       </div>
