update checkout page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     body{
       background-color: rgb(244, 220, 227);
     }
+    h5{
+      font-size: 18px;
+    }
+    p{
+      font-size: 12px;
+    }
     </style>
   </head>
   <body>
