update service page

--- a/service.html
+++ b/service.html
@@ -32,14 +32,13 @@
         top: 30px;
         border-radius: 20px;
         padding: 10px 5px;
-        
       }
       .img-fluid:hover{
         transform: translateY(-10px);
       }
       .last_row{
         width: 60% !important;
-        position: relative;
+        position: relative !important;
         left: 350px;
         top: 50px;
         height: 220px;
