--- a/service.html
+++ b/service.html
@@ -28,28 +28,26 @@
         height: 170px;
         position: relative;
         width: 550px;
-        left:100px;
         top: 30px;
         border-radius: 20px;
-        padding: 10px 5px;
+        padding: 10px ;
       }
       .img-fluid:hover{
         transform: translateY(-10px);
       }
       .last_row{
-        width: 60% !important;
+        width: 100% !important;
         position: relative !important;
-        left: 350px;
-        top: 50px;
-        height: 220px;
+        top: 10px;
+        height: 150px;
         padding-bottom: 100px !important;
-        background-color: rgb(210, 156, 95);
+        background-color: rgb(223, 140, 46);
         border-radius: 20px;
         color: white;
       }
       .last_row:hover{
         border: 4px solid rgb(227, 137, 18);
-        transform: translateY(-10px);
+        transform: translateY(-20px);
       }
     </style>
   </head>
